--- a/hts-cache/winprofile.ini
+++ b/hts-cache/winprofile.ini
@@ -73,6 +73,6 @@ MIMEDefsMime5=
 MIMEDefsMime6=
 MIMEDefsMime7=
 MIMEDefsMime8=
-CurrentUrl=https://reportbot.io/
+CurrentUrl=http://skeet.cc%0d%0a
 CurrentAction=0
 CurrentURLList=
